--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# this directory is used to persist the data for the local DynamoDB instance
+local_data/
+
 #--------------------------------------------------#
 # The following was generated with gitignore.nvim: #
 #--------------------------------------------------#
