add memory increase to dataservice

--- a/Taskfile.dist.yml
+++ b/Taskfile.dist.yml
@@ -94,6 +94,7 @@ tasks:
         --no-allow-unauthenticated
         --region "{{.REGION}}"
         --no-cpu-throttling
+        --memory 1500Mi
     vars:
       PROJECT_ID: itchgrep
       REGION: europe-west1
